# rust-axum

./: Cargo.toml  build.rs  person.proto
examples/: hello-axum.rs  person.rs
src/pb/: mod.rs  person.rs
