[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144",features = ["derive"] }
axum = { version = "0.5.15",features = ["headers"] }
tokio = { version = "1",features = ["full"] }
jsonwebtoken = "8.1.1"
async-trait = "0.1.57"
prost = "0.11.0"

[build-dependencies]
prost-build = "0.11.1"
